Updated resume file, improved Japanese text usage, adjusted header text layout, fixed mobile photo wall margins and alignment, and enhanced button visibility on photo covers.

--- a/PersonalWebsite/static/assets/css/steller.css
+++ b/PersonalWebsite/static/assets/css/steller.css
@@ -11,6 +11,7 @@
 
 * The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
 */
+
 :root {
   --blue: #79A9F5;
   --indigo: #C45F90;
@@ -53,6 +54,12 @@ html {
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+html,
+body {
+  overflow-x: hidden;
+  /* 禁止水平滚动 */
 }
 
 article,
@@ -12256,84 +12263,6 @@ pre {
   min-width: 160px;
 }
 
-/* 以前的 */
-/* .img-wrapper {
-  position: relative;
-  border-radius: 0.25rem;
-  overflow: hidden;
-  margin-bottom: 30px;
-  display: block;
-}
-
-.img-wrapper img {
-  position: relative;
-  width: 100%;
-  z-index: 8;
-}
-
-.img-wrapper .overlay {
-  background: rgba(255, 122, 87, 0.7);
-  position: absolute;
-  left: 0;
-  bottom: 100%;
-  width: 100%;
-  height: 100%;
-  z-index: 9;
-  visibility: hidden;
-  opacity: 0;
-  -webkit-transition: all 0.4s;
-  transition: all 0.4s;
-}
-
-.img-wrapper .overlay .overlay-infos {
-  position: absolute;
-  top: 0%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-  -webkit-transition-delay: .2s;
-  transition-delay: .2s;
-  color: #fff;
-}
-
-.img-wrapper .overlay .overlay-infos h5 {
-  margin-bottom: 15px;
-}
-
-.img-wrapper .overlay .overlay-infos a {
-  display: inline-block;
-  width: 35px;
-  height: 35px;
-  border-radius: 50%;
-  border: 2px solid #fff;
-  line-height: 35px;
-  text-align: center;
-  color: #fff;
-  text-decoration: none;
-}
-
-.img-wrapper .overlay .overlay-infos a:hover {
-  background: #fff;
-  color: #ff7a57;
-}
-
-.img-wrapper:hover .overlay,
-.img-wrapper:active .overlay {
-  bottom: 0;
-  visibility: visible;
-  opacity: 1;
-}
-
-.img-wrapper:hover .overlay .overlay-infos,
-.img-wrapper:active .overlay .overlay-infos {
-  top: 50%;
-} */
-
-
-/* 新的 */
 /* 电脑端默认样式（大屏幕适配） */
 .photo-wall {
   /* 确保宽度不超出父级容器 */
@@ -12404,6 +12333,16 @@ pre {
   transition: all 0.3s ease;
 }
 
+.ti-zoom-in,
+.ti-link {
+  color: #e2e3e4;
+}
+
+.ti-zoom-in:hover,
+.ti-link:hover {
+  color: #fff;
+}
+
 .photo-wall .img-wrapper:hover .overlay {
   visibility: visible;
   opacity: 0.7;
@@ -12430,14 +12369,16 @@ pre {
 
   .photo-wall .col-md-4,
   .photo-wall .col-md-8 {
-    width: 100%;
+    box-sizing: border-box;
+    width: 90%;
     /* 宽度占满 */
     max-width: 400px;
     /* 手机端统一最大宽度 */
-    padding: 0;
-    /* 移除列间左右内边距 */
+    padding: 0 auto 15px;
+    /* 添加左右内边距 */
     margin-bottom: 15px;
     /* 列之间的间距 */
+    padding: 0 0;
   }
 
   .photo-wall .img-wrapper {
@@ -12464,6 +12405,10 @@ pre {
   .photo-wall .img-wrapper:hover .overlay {
     visibility: visible;
     opacity: 0.7;
+  }
+
+  #photography i {
+    background-color: white;
   }
 
   .photo-wall .img-wrapper .overlay .overlay-infos {
@@ -12867,11 +12812,33 @@ pre {
   justify-content: flex-start;
 }
 
-.header .container .infos .subtitle .kanji1,
-.header .container .infos .subtitle .kanji2 {
+.subtitle .kanji1,
+.subtitle .kanji2 {
   color: #ff7a57;
   width: 74px;
   text-align: center
+}
+
+.header .container .infos .title {
+  margin-bottom: 0px;
+  font-size: 74px;
+  font-weight: bold;
+  position: relative;
+}
+
+.kanji-wrapper {
+  position: relative;
+  display: inline-block;
+}
+
+.header .container .infos .subtitle {
+  position: absolute;
+  top: -20px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 10px;
+  font-weight: 500;
+  color: #ff7a57;
 }
 
 .header .container .infos .title {
